content of six news added

--- a/pages/tech/tech.html
+++ b/pages/tech/tech.html
@@ -122,10 +122,8 @@
                             <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
                                 alt="">
                             <div class="homepage-Card">
-                                <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
-                                    obcaecati
-                                    voluptatem temporibus reprehenderit iure mollitia!</p>
+                                <h3>Anushka, the low-cost humanoid robot built parts from dump yard.</h3>
+                                <p>With emergence of generative AI, existing robots like Sophia developed by Hanson Robotics,a future with fully-realised robots doesn’t seem distant.</p>
                                 <a href="">Read more</a>
                             </div>
                         </div>
