img of 6th news added

--- a/pages/tech/tech.html
+++ b/pages/tech/tech.html
@@ -119,7 +119,7 @@
                             </div>
                         </div>
                         <div class="card">
-                            <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
+                            <img src="../../images/tech img4.avif"
                                 alt="">
                             <div class="homepage-Card">
                                 <h3>Anushka, the low-cost humanoid robot built parts from dump yard.</h3>
