added sport content

--- a/pages/sport/sport.html
+++ b/pages/sport/sport.html
@@ -84,19 +84,19 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
-                            alt="">
+                        <img src="./../../images/hockey"
+                            alt="image not found">
                         <div class="sport-Card">
-                            <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
-                                obcaecati
-                                voluptatem temporibus reprehenderit iure mollitia!</p>
-                            <a href="">Read more</a>
-                        </div>
+                            <h3>'GREAT WALL':Sreejesh is a legend of hockey : India teammates</h3>
+                            <p>India's hockey team, led by PR Sreejesh, won a bronze medal India's hockey team, led by PR Sreejesh, won a bronze medal at the Paris Olympics by defeating Spain 2-1.
+
+                              </p>
+                              <a href="./../../pages/sport/hocky.html">Read more</a>
+                              </div>
                     </div>
                     <div class="card">
-                        <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
-                            alt="">
+                        <img src="./../../images/football_news"
+                            alt="image not found">
                         <div class="sport-Card">
                             <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
