added sport card

--- a/pages/sport/sport.html
+++ b/pages/sport/sport.html
@@ -29,13 +29,13 @@
                 </div>
                 <div>
                     <div class="top-nav-icons">
-                        <a href="http://facebook.com" target="_blank"><img src="./images/facebook.png"
+                        <a href="http://facebook.com" target="_blank"><img src="../../images/facebook.png"
                                 alt="facebook-icon" target="_blank"></a>
-                        <a href="https://instagram.com" target="_blank"><img src="./images/instagram.png"
+                        <a href="https://instagram.com" target="_blank"><img src="./../../images/instagram.png"
                                 alt="instagram-icon"></a>
-                        <a href="https://web.telegram.org" target="_blank"><img src="./images/telegram.png"
+                        <a href="https://web.telegram.org" target="_blank"><img src="./../../images/telegram.png"
                                 alt="telegram-icon"></a>
-                        <a href="https://youtube.com" target="_blank"><img src="./images/youtube.png"
+                        <a href="https://youtube.com" target="_blank"><img src="./../../images/youtube.png"
                                 alt="youtube-icon"></a>
                     </div>
                     <div class="top-nav-search-bar">
@@ -109,42 +109,42 @@
 
                 
                     <div class="sport-heading-details">
-                        <h1>Business articles</h1>
+                        <h1>Olympic sport News:</h1>
                         
                     </div>
                     <div class="sport-second-card-container">
                     <div class="cards">
                         <div class="card">
-                            <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
+                            <img src="../../images/olympic"
                                 alt="">
                             <div class="sport-Card">
                                 <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
                                     obcaecati
                                     voluptatem temporibus reprehenderit iure mollitia!</p>
-                                <a href="">Read more</a>
+                                <a href="./olympic.html">Read more</a>
                             </div>
                         </div>
                         <div class="card">
-                            <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
+                            <img src="../../images/swapnil-kusale"
                                 alt="">
                             <div class="sport-Card">
                                 <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
                                     obcaecati
                                     voluptatem temporibus reprehenderit iure mollitia!</p>
-                                <a href="">Read more</a>
+                                <a href="./swapnil.html">Read more</a>
                             </div>
                         </div>
                         <div class="card">
-                            <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
+                            <img src="./../../images/vinesh phogat"
                                 alt="">
                             <div class="sport-Card">
                                 <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
                                     obcaecati
                                     voluptatem temporibus reprehenderit iure mollitia!</p>
-                                <a href="">Read more</a>
+                                <a href="./vinesh.html">Read more</a>
                             </div>
                         </div>
                     </div>
