added all cards .....

--- a/pages/sport/sport.html
+++ b/pages/sport/sport.html
@@ -80,6 +80,7 @@
                             <h3>'We did not play.....':ROHIT SHARMA EXPLAIN WHY INDIA FAILED TO  DOMINATE AGAINST SHRI  LANKA SPIN</h3>
                             <p>After India's series defeat by Sri Lanka, captain Rohit Sharma expressed concerns about the team's struggles against spin and the lack of sweep shot.
                             </p>
+                            <br>
                             <a href="./../../pages/sport/cricket.html">Read more</a>
                         </div>
                     </div>
@@ -90,7 +91,7 @@
                             <h3>'GREAT WALL':Sreejesh is a legend of hockey : India teammates</h3>
                             <p>India's hockey team, led by PR Sreejesh, won a bronze medal India's hockey team, led by PR Sreejesh, won a bronze medal at the Paris Olympics by defeating Spain 2-1.
 
-                              </p><p></p>
+                                 <br><br><br><br><br>
                               <a href="./../../pages/sport/hocky.html">Read more</a>
                               </div>
                     </div>
@@ -100,7 +101,7 @@
                         <div class="sport-Card">
                             <h3>Gurpreet Singh Sandhu's brilliant save helps India win SAFF Championship for a record 9th time.</h3>
                             <p>It was during this crucial moment that Gurpreet Singh Sandhu, India's goalkeeper, showcased his exceptional skills by making an incredible save. Meanwhile, Mahesh Naorem successfully scored for India, while Gurpreet's save denied Kuwait a goal.</p>
-                            <a href="">Read more</a>
+                            <a href="./football.html">Read more</a>
                         </div>
                     </div>
                 </div>
@@ -115,13 +116,12 @@
                     <div class="sport-second-card-container">
                     <div class="cards">
                         <div class="card">
-                            <img src="../../images/olympic"
-                                alt="">
+                            <img src="../../images/neeraj.webp"
+                                alt="no image found">
                             <div class="sport-Card">
-                                <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
-                                    obcaecati
-                                    voluptatem temporibus reprehenderit iure mollitia!</p>
+                                <h3>No matter how big a champion someone is, he does not always win, says Neeraj Chopra</h3>
+                                <p>This time Chopra, who relinquished the top spot to Pakistan’s Arshad Nadeem at the Stade de France in Paris the other night,
+                                     did not have the privilege of standing to the National anthem again, </p>
                                 <a href="./olympic.html">Read more</a>
                             </div>
                         </div>
@@ -129,10 +129,9 @@
                             <img src="../../images/swapnil-kusale"
                                 alt="">
                             <div class="sport-Card">
-                                <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
-                                    obcaecati
-                                    voluptatem temporibus reprehenderit iure mollitia!</p>
+                                <h3>Grit and glory: Swapnil Kusale eyes Los Angeles 2028 for an encore</h3>
+                                <p>Swapnil Kusale, a 29-year-old Kolhapur native, won India's third shooting bronze at Parise Olympic in the mens 50 m rifles 3 position event.
+                               </p><br>
                                 <a href="./swapnil.html">Read more</a>
                             </div>
                         </div>
@@ -140,10 +139,9 @@
                             <img src="./../../images/vinesh phogat"
                                 alt="">
                             <div class="sport-Card">
-                                <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
-                                    obcaecati
-                                    voluptatem temporibus reprehenderit iure mollitia!</p>
+                                <h3>Timeline: How Vinesh Phogat's disqualification appeal was dismissed by CAS</h3>
+                                    <p>Vinesh Pohgat's wait for positive outcome from her appeal to the court of Arbitration for sport (CAS), against her qualification at the paris Olympic ,
+                                        has finally ended after the sports' top court dismissed it on Wendnesday. </p>
                                 <a href="./vinesh.html">Read more</a>
                             </div>
                         </div>
@@ -173,17 +171,14 @@
                 <div class="sidebar-section">
                     <h2>Popular News</h2>
                     <div>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a><br>
+                        <br> <a href="./olympic.html">No matter how big a champion someone is, he does not always win, says Neeraj Chopra</a><br>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a><br>
+                        <br><a href="./swapnil.html"></a>Grit and glory: Swapnil Kusale eyes Los Angeles 2028 for an encore<br>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a><br>
+                        <br><a href="./vinesh.html">Timeline: How Vinesh Phogat's disqualification appeal was dismissed by CAS</a><br>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <br><br>
+                        
                     </div>
                     <button>Load More +</button>
                 </div>
