--- a/pages/sport/sport.html
+++ b/pages/sport/sport.html
@@ -47,13 +47,13 @@
 
             <div>
                 <ul class="nav-list">
-                    <li><a href="">world news</a></li>
-                    <li><a href="">Sports</a></li>
-                    <li><a href="">Tech</a></li>
-                    <li><a href="">Entertainment</a></li>
-                    <li><a href="">Business</a></li>
-                    <li><a href="">Culture</a></li>
-                    <li><a href="">Education</a></li>
+                    <li><a href="../../index.html">world news</a></li>
+                    <li><a href="./sport.html">Sports</a></li>
+                    <li><a href="../Tech">Tech</a></li>
+                    <li><a href="../entertainment.html">Entertainment</a></li>
+                    <li><a href="../Business/Business_News.html">Business</a></li>
+                    <li><a href="../culture.html">Culture</a></li>
+                    <li><a href="../education.html">Education</a></li>
                 </ul>
             </div>
         </nav>
@@ -157,13 +157,13 @@
                 <div class="sidebar-section">
                     <h2>Latest News</h2>
                     <div>
-                        <br> <a href="./cricket.html">'We did not play.....':ROHIT SHARMA EXPLAIN WHY INDIA FAILED TO  DOMINATE AGAINST SHRI  LANKA SPIN</a><br>
+                        <a href="./cricket.html">'We did not play.....':ROHIT SHARMA EXPLAIN WHY INDIA FAILED TO  DOMINATE AGAINST SHRI  LANKA SPIN</a>
                         <hr>
-                        <br><a href="./hocky.html">'GREAT WALL':Sreejesh is a legend of hockey : India teammates</a><br>
+                        <a href="./hocky.html">'GREAT WALL':Sreejesh is a legend of hockey : India teammates</a>
                         <hr>
-                        <br><a href="./football.html">Gurpreet Singh Sandhu's brilliant save helps India win SAFF Championship for a record 9th time.</a><br>
+                        <a href="./football.html">Gurpreet Singh Sandhu's brilliant save helps India win SAFF Championship for a record 9th time.</a>
                         <hr>
-                        <br><br>
+                        <br>
                         
                     </div>
                     <button>Load More +</button>
@@ -171,13 +171,13 @@
                 <div class="sidebar-section">
                     <h2>Popular News</h2>
                     <div>
-                        <br> <a href="./olympic.html">No matter how big a champion someone is, he does not always win, says Neeraj Chopra</a><br>
+                        <a href="./olympic.html">No matter how big a champion someone is, he does not always win, says Neeraj Chopra</a>
                         <hr>
-                        <br><a href="./swapnil.html"></a>Grit and glory: Swapnil Kusale eyes Los Angeles 2028 for an encore<br>
+                        <a href="./swapnil.html">Grit and glory: Swapnil Kusale eyes Los Angeles 2028 for an encore</a>
                         <hr>
-                        <br><a href="./vinesh.html">Timeline: How Vinesh Phogat's disqualification appeal was dismissed by CAS</a><br>
+                        <a href="./vinesh.html">Timeline: How Vinesh Phogat's disqualification appeal was dismissed by CAS</a>
                         <hr>
-                        <br><br>
+                        <br>
                         
                     </div>
                     <button>Load More +</button>
@@ -214,8 +214,8 @@
             <div class="footer-nav-links">
                 <h3>Links</h3>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="">About</a></li>
+                    <li><a href="./../../index.html">Home</a></li>
+                    <li><a href="./../aboutusPage.html">About</a></li>
                     <li><a href="">Contact</a></li>
                     <li><a href="">Login</a></li>
                 </ul>
@@ -223,12 +223,12 @@
             <div class="footer-nav-links">
                 <h3>Important Links</h3>
                 <ul>
-                    <li><a href="">world news</a></li>
-                    <li><a href="">Sports</a></li>
-                    <li><a href="">Tech</a></li>
+                    <li><a href="./../../index.html">world news</a></li>
+                    <li><a href="./../sport/sport.html">Sports</a></li>
+                    <li><a href="./../tech.html">Tech</a></li>
                     <li><a href="">Entertainment</a></li>
-                    <li><a href="">Business</a></li>
-                    <li><a href="">Culture</a></li>
+                    <li><a href="./../Business/Business_News.html">Business</a></li>
+                    <li><a href="./../culture.html">Culture</a></li>
                     <li><a href="">Education</a></li>
                 </ul>
             </div>
@@ -243,13 +243,13 @@
                 <div class="footer-follow-us-Container">
                     <h3>Follow Us</h3>
                     <div class="top-nav-icons">
-                        <a href="http://facebook.com" target="_blank"><img src="./images/facebook.png"
+                        <a href="http://facebook.com" target="_blank"><img src="./../../images/facebook.png"
                                 alt="facebook-icon" target="_blank"></a>
-                        <a href="https://instagram.com" target="_blank"><img src="./images/instagram.png"
+                        <a href="https://instagram.com" target="_blank"><img src="./../../images/instagram.png"
                                 alt="instagram-icon"></a>
-                        <a href="https://web.telegram.org" target="_blank"><img src="./images/telegram.png"
+                        <a href="https://web.telegram.org" target="_blank"><img src="./../../images/telegram.png"
                                 alt="telegram-icon"></a>
-                        <a href="https://youtube.com" target="_blank"><img src="./images/youtube.png"
+                        <a href="https://youtube.com" target="_blank"><img src="./../../images/youtube.png"
                                 alt="youtube-icon"></a>
                     </div>
                 </div>
