upper cards section added

--- a/pages/Business/Business_News.html
+++ b/pages/Business/Business_News.html
@@ -66,35 +66,29 @@
                 </div>
                 <div class="cards">
                     <div class="card">
-                        <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
-                            alt="">
+                        <img src="./../../images/Adani_business.jpeg"
+                            alt="Business_news 1">
                         <div class="homepage-Card">
-                            <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
-                                obcaecati
-                                voluptatem temporibus reprehenderit iure mollitia!</p>
+                            <h3>Adani now allowed to sell Bangladesh-bound power in India</h3>
+                            <p>Adani Power coalfired power plant under contract to offer all its output to Bangladesh can now provide the domestic market</p>
                             <a href="">Read more</a>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
-                            alt="">
+                        <img src="./../../images/market_business.jpg"
+                            alt="Business_news 2">
                         <div class="homepage-Card">
-                            <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
-                                obcaecati
-                                voluptatem temporibus reprehenderit iure mollitia!</p>
+                            <h3>Sensex snaps two-day losing streak on rebound in IT shares</h3>
+                            <p>Benchmark Sensex closed higher by 150 points on Wednesday, snapping its two-day losing streak following a rally in IT stocks amid a surge in the US markets.</p>
                             <a href="">Read more</a>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
-                            alt="">
+                        <img src="./../../images/economic_business.jpg"
+                            alt="Business_news 2">
                         <div class="homepage-Card">
-                            <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
-                                obcaecati
-                                voluptatem temporibus reprehenderit iure mollitia!</p>
+                            <h3>Wholesale price inflation drops to 2.04% in July</h3>
+                            <p>Inflation in India’s wholesale prices dropped from a 16-month high of 3.4% in June, to 2.04% in July, with the rise in food prices</p>
                             <a href="">Read more</a>
                         </div>
                     </div>
