all 6 cards added

--- a/pages/Business/Business_News.html
+++ b/pages/Business/Business_News.html
@@ -85,7 +85,7 @@
                     </div>
                     <div class="card">
                         <img src="./../../images/economic_business.jpg"
-                            alt="Business_news 2">
+                            alt="Business_news 3">
                         <div class="homepage-Card">
                             <h3>Wholesale price inflation drops to 2.04% in July</h3>
                             <p>Inflation in India’s wholesale prices dropped from a 16-month high of 3.4% in June, to 2.04% in July, with the rise in food prices</p>
@@ -93,35 +93,29 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
-                            alt="">
+                        <img src="./../../images/OLA_business.jpeg"
+                            alt="Business_news 4">
                         <div class="homepage-Card">
-                            <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
-                                obcaecati
-                                voluptatem temporibus reprehenderit iure mollitia!</p>
+                            <h3>Ola Electric posts bigger Q1 loss as incentives drop, costs rise</h3>
+                            <p>Ola Electric reported a wider first-quarter loss August 14, 2024, hurt by the price cuts it took to boost demand after the government reduced incentives.</p>
                             <a href="">Read more</a>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
-                            alt="">
+                        <img src="./../../images/agriculture_business.jpeg"
+                            alt="Business_news 4">
                         <div class="homepage-Card">
-                            <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
-                                obcaecati
-                                voluptatem temporibus reprehenderit iure mollitia!</p>
+                            <h3>VST ropes in Axis Bank to offer loan to farmers</h3>
+                            <p>VST Tillers Tractors Limited (VST), a farm equipment manufacturer, signed a Memorandum of Understanding (MOU) with Axis Bank</p>
                             <a href="">Read more</a>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
+                        <img src="./../../images/money_business.jpg"
                             alt="">
                         <div class="homepage-Card">
-                            <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
-                                obcaecati
-                                voluptatem temporibus reprehenderit iure mollitia!</p>
+                            <h3>Rupee rises 7 paise against US dollar in early trade</h3>
+                            <p>The Indian rupee appreciated 7 paise to 83.90 against the US dollar on August 14 2024 American currency retreated from its elevated levels.</p>
                             <a href="">Read more</a>
                         </div>
                     </div>
