--- a/pages/Business/Business_News.html
+++ b/pages/Business/Business_News.html
@@ -19,8 +19,8 @@
                 </div>
                 <div>
                     <ul class="top-nav-list">
-                        <li><a href="#">Home</a></li>|
-                        <li><a href="">About</a></li>|
+                        <li><a href="./../../index.html">Home</a></li>|
+                        <li><a href="./../aboutusPage.html">About</a></li>|
                         <li><a href="">Contact</a></li>|
                         <li><a href="">Login</a></li>
                     </ul>
@@ -47,7 +47,7 @@
                 <ul class="nav-list">
                     <li><a href="">world news</a></li>
                     <li><a href="">Sports</a></li>
-                    <li><a href="">Tech</a></li>
+                    <li><a href="./../tech/tech.html">Tech</a></li>
                     <li><a href="">Entertainment</a></li>
                     <li><a href="">Business</a></li>
                     <li><a href="">Culture</a></li>
