added criket pages content

--- a/pages/sport/sport.html
+++ b/pages/sport/sport.html
@@ -49,7 +49,7 @@
                 <ul class="nav-list">
                     <li><a href="../../index.html">world news</a></li>
                     <li><a href="./sport.html">Sports</a></li>
-                    <li><a href="../Tech">Tech</a></li>
+                    <li><a href="../tech/tech.html">Tech</a></li>
                     <li><a href="../entertainment.html">Entertainment</a></li>
                     <li><a href="../Business/Business_News.html">Business</a></li>
                     <li><a href="../culture.html">Culture</a></li>
@@ -68,7 +68,7 @@
     <section class="section-container">
         <div class="sport-content">
             <div class="sport-Cards-container">
-                <div class="sport-heading-details">
+                <div class="sport-heading-details ">
                     <h1>Sport News:</h1>
 
                 </div>
@@ -157,11 +157,11 @@
                 <div class="sidebar-section">
                     <h2>Latest News</h2>
                     <div>
-                        <a href="./cricket.html">'We did not play.....':ROHIT SHARMA EXPLAIN WHY INDIA FAILED TO  DOMINATE AGAINST SHRI  LANKA SPIN</a>
+                        <a href="./cricket.html"style="text-decoration:none;">'We did not play.....':ROHIT SHARMA EXPLAIN WHY INDIA FAILED TO  DOMINATE AGAINST SHRI  LANKA SPIN</a>
                         <hr>
-                        <a href="./hocky.html">'GREAT WALL':Sreejesh is a legend of hockey : India teammates</a>
+                        <a href="./hocky.html"style="text-decoration:none;">'GREAT WALL':Sreejesh is a legend of hockey : India teammates</a>
                         <hr>
-                        <a href="./football.html">Gurpreet Singh Sandhu's brilliant save helps India win SAFF Championship for a record 9th time.</a>
+                        <a href="./football.html"style="text-decoration:none;">Gurpreet Singh Sandhu's brilliant save helps India win SAFF Championship for a record 9th time.</a>
                         <hr>
                         <br>
                         
@@ -171,11 +171,11 @@
                 <div class="sidebar-section">
                     <h2>Popular News</h2>
                     <div>
-                        <a href="./olympic.html">No matter how big a champion someone is, he does not always win, says Neeraj Chopra</a>
+                        <a href="./olympic.html"style="text-decoration:none;">No matter how big a champion someone is, he does not always win, says Neeraj Chopra</a>
                         <hr>
-                        <a href="./swapnil.html">Grit and glory: Swapnil Kusale eyes Los Angeles 2028 for an encore</a>
+                        <a href="./swapnil.html"style="text-decoration:none;">Grit and glory: Swapnil Kusale eyes Los Angeles 2028 for an encore</a>
                         <hr>
-                        <a href="./vinesh.html">Timeline: How Vinesh Phogat's disqualification appeal was dismissed by CAS</a>
+                        <a href="./vinesh.html"style="text-decoration:none;">Timeline: How Vinesh Phogat's disqualification appeal was dismissed by CAS</a>
                         <hr>
                         <br>
                         
@@ -225,7 +225,7 @@
                 <ul>
                     <li><a href="./../../index.html">world news</a></li>
                     <li><a href="./../sport/sport.html">Sports</a></li>
-                    <li><a href="./../tech.html">Tech</a></li>
+                    <li><a href="./../tech/tech.html">Tech</a></li>
                     <li><a href="">Entertainment</a></li>
                     <li><a href="./../Business/Business_News.html">Business</a></li>
                     <li><a href="./../culture.html">Culture</a></li>
