first business news

--- a/pages/Business/business_news_1.html
+++ b/pages/Business/business_news_1.html
@@ -60,6 +60,11 @@
             </nav>
         </header>
 
+        <!--Read More content started-->
+        <div class="readmore-heading-details">
+            <h1>Adani now allowed to sell Bangladesh-bound power in India</h1>
+        </div>
+
     </body>
 
 </html>
