first card added

--- a/pages/Education/education.html
+++ b/pages/Education/education.html
@@ -62,11 +62,11 @@
                 </div>
                 <div class="cards">
                     <div class="card">
-                        <img src=""
-                            alt="">
+                        <img src="../../images/ai.avif"
+                            alt="AI-img">
                         <div class="homepage-Card">
-                            <h3></h3>
-                            <p></p>
+                            <h3>The AI Advantage in Teaching and Learning</h3>
+                            <p>By leveraging AI, educators can enhance their curricula, foster peer collaboration, and prepare students for AI-driven careers</p>
                             <a href="">Read more</a>
                         </div>
                     </div>
