second card added

--- a/pages/Education/education.html
+++ b/pages/Education/education.html
@@ -71,11 +71,11 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src=""
+                        <img src="../../images/cbsc.avif"
                             alt="">
                         <div class="homepage-Card">
-                            <h3></h3>
-                            <p>.</p>
+                            <h3>CBSE elaborates guidelines for children with special needs</h3>
+                            <p>CBSE in official notice to all the Heads and Managers of the schools affiliated with the Board, issued a set of guidelines for Children with Needs.</p>
                             <a href="">Read more</a>
                         </div>
                     </div>
