--- a/pages/Education/education.html
+++ b/pages/Education/education.html
@@ -80,11 +80,11 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="../../images/vivo.jpeg"
+                        <img src="../../images/modi.webp"
                             alt="">
                         <div class="homepage-Card">
-                            <h3>Vivo,Xiaomi leads as Indian smartphone market in 2024.</h3>
-                            <p>Vivo,Xiaomi & Samsung dominated Indian smartphone market,which reach 69 million units,marks a 7% year-over-year growth in the first half of 2024. </p>
+                            <h3>PM Modi: No need for youth to study abroad with new education system.</h3>
+                            <p>PM Modi said his government wants to build such an education system in the country so that youngsters need not have to go abroad for studies.</p>
                             <a href="">Read more</a>
                         </div>
                     </div>
