--- a/pages/Education/education.html
+++ b/pages/Education/education.html
@@ -99,11 +99,11 @@
 
                     <div class="cards">
                         <div class="card">
-                            <img src="../../images/tech img 2.avif"
+                            <img src="../../images/Nalanda-uni.avif"
                                 alt="">
                             <div class="homepage-Card">
-                                <h3>SpaceX’s mission to explore polar orbit first for spaceflight.</h3>
-                                <p>Elon Musk’s SpaceX has announced plans to launch the first-ever crewed mission to explore Earth’s polar orbit by the end of this year.</p>
+                                <h3>PM Modi: Revive Nalanda's spirit to renew global knowledge traditions.</h3>
+                                <p>PM Modi seeks to revive the spirit of ancient Nalanda University, aiming to make India a global hub for higher learning and research.</p>
                                 <a href="">Read more</a>
                             </div>
                         </div>
