image added in read more page

--- a/pages/Business/business_news_1.html
+++ b/pages/Business/business_news_1.html
@@ -65,6 +65,11 @@
             <h1>Adani now allowed to sell Bangladesh-bound power in India</h1>
         </div>
 
+        <div class="img_container">
+            <img src="./../../images/adani_company.jpg" alt="Adani Business" class="front_img"/>
+        </div>
+        
+
     </body>
 
 </html>
