--- a/pages/tech/tech.html
+++ b/pages/tech/tech.html
@@ -60,7 +60,7 @@
         <div class="homepage-content">
             <div class="homepage-Cards-container">
                 <div class="homepage-heading-details">
-                    <h1>From Around the World</h1>
+                    <h1>TECH NEWS</h1>
                 </div>
                 <div class="cards">
                     <div class="card">
@@ -95,9 +95,6 @@
                 <!-- second card container -->
 
                 <div class="hompage-second-card-container">
-                    <div class="homepage-heading-details">
-                        <h1>latest articles</h1>
-                    </div>
 
                     <div class="cards">
                         <div class="card">
@@ -132,6 +129,42 @@
 
                 <!-- second card container end -->
 
+                <!-- third card container -->
+
+<div class="hompage-second-card-container">
+
+    <div class="cards">
+        <div class="card">
+            <img src="../../images/tech img5.jpg"
+                alt="">
+            <div class="homepage-Card">
+                <h3>Ola unveil plan around AI,EV fleet & automated warehousing.</h3>
+                <p>Ola Cab known for its ride-hailing service,expanding its vision to transform India's digital commerce landscape under the banner of Ola Consumer.</p>
+                <a href="">Read more</a>
+            </div>
+        </div>
+        <div class="card">
+            <img src="../../images/tech img 3.jpg"
+                alt="">
+            <div class="homepage-Card">
+                <h3>Instagram features to let user keep friends update on their location.</h3>
+                <p>Instagram is reportedly working on allowing users to share real-time updates with their friends on a map to get their locations.</p>
+                <a href="">Read more</a>
+            </div>
+        </div>
+        <div class="card">
+            <img src="../../images/tech img4.avif"
+                alt="">
+            <div class="homepage-Card">
+                <h3>Anushka, the low-cost humanoid robot built parts from dump yard.</h3>
+                <p>With emergence of generative AI, existing robots like Sophia developed by Hanson Robotics,a future with fully-realised robots doesn’t seem distant.</p>
+                <a href="">Read more</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- third card container end -->
             </div>
             <div class="homepage-Sidebar">
                 <div class="sidebar-section">
