--- a/pages/tech/tech.html
+++ b/pages/tech/tech.html
@@ -144,11 +144,11 @@
             </div>
         </div>
         <div class="card">
-            <img src="../../images/tech img 3.jpg"
+            <img src="../../images/tech img 6.avif"
                 alt="">
             <div class="homepage-Card">
-                <h3>Instagram features to let user keep friends update on their location.</h3>
-                <p>Instagram is reportedly working on allowing users to share real-time updates with their friends on a map to get their locations.</p>
+                <h3>PM calls youth to lead in gaming & semiconductor design .</h3>
+                <p>The Prime Minister specifically address IT professionals & AI experts,urging them to lead the development of innovative gaming products.</p>
                 <a href="">Read more</a>
             </div>
         </div>
