news information added

--- a/pages/Business/business_news_1.html
+++ b/pages/Business/business_news_1.html
@@ -67,6 +67,15 @@
 
         <div class="img_container">
             <img src="./../../images/adani_company.jpg" alt="Adani Business" class="front_img"/>
+            <div class="information_block">
+                An Adani Power (ADAN.NS), opens new tab coal-fired power plant under contract to sell all its output to Bangladesh can now supply the domestic market after an amendment to India's power export rules, helping the company hedge against political risks in Bangladesh.
+                An internal federal power ministry memo, dated Aug. 12 and seen by Reuters, amends 2018 guidelines governing generators supplying electricity "exclusively to a neighbouring country". Currently only one plant in India - Adani Power's 1,600 megawatt (MW) Godda plant in eastern Jharkhand state - is under contract to export 100% of its power to a neighbouring country.
+                The memo says "the government of India may permit connection of such generating station to the Indian grid to facilitate sale of power within India in case of sustained non-scheduling of full or part capacity".
+                The move, which happened nearly a week after longtime Prime Minister Sheikh Hasina fled Bangladesh amid deadly protests triggered by quotas for government jobs, could also benefit future projects where all output is locked into export contracts.
+                Bangladesh is battling anarchy and vandalism, with a caretaker government vowing that improving law and order was its top priority.
+                The amendment by the Indian government also allows sale of power to the local grid if there is a delay in payments.
+                The conglomerate called the plant a "shining example of India-Bangladesh cooperation" in July 2023, shortly after its billionaire Chairman Gautam Adani met Hasina following full-load commissioning of the plant.
+            </div>
         </div>
         
 
