--- a/pages/tech/tech.html
+++ b/pages/tech/tech.html
@@ -153,11 +153,11 @@
             </div>
         </div>
         <div class="card">
-            <img src="../../images/tech img4.avif"
+            <img src="../../images/tech img7.avif"
                 alt="">
             <div class="homepage-Card">
-                <h3>Anushka, the low-cost humanoid robot built parts from dump yard.</h3>
-                <p>With emergence of generative AI, existing robots like Sophia developed by Hanson Robotics,a future with fully-realised robots doesn’t seem distant.</p>
+                <h3>Apple opens iPhone's tap-to-pay secure element for transactions.</h3>
+                <p>Apple is giving developers greater control over Near Field Communication (NFC) technology on iPhone with the release of iOS 18.1.</p>
                 <a href="">Read more</a>
             </div>
         </div>
