first business page created

--- a/pages/Business/Business_News.html
+++ b/pages/Business/Business_News.html
@@ -71,7 +71,7 @@
                         <div class="homepage-Card">
                             <h3>Adani now allowed to sell Bangladesh-bound power in India</h3>
                             <p>Adani Power coalfired power plant under contract to offer all its output to Bangladesh can now provide the domestic market</p>
-                            <a href="">Read more</a>
+                            <a href="business_news_1.html">Read more</a>
                         </div>
                     </div>
                     <div class="card">
