--- a/pages/Business/business_news_1.html
+++ b/pages/Business/business_news_1.html
@@ -62,6 +62,7 @@
 
         <!--Read More content started-->
         <div class="readmore-heading-details">
+            <a href="Business_News.html"><img src="./../../images/back-btn.png" class="back-btn"/></a>
             <h1>Adani now allowed to sell Bangladesh-bound power in India</h1>
         </div>
 
