added cricket pages content

--- a/pages/sport/cricket.html
+++ b/pages/sport/cricket.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="top-nav-search-bar">
                         <input type="text" placeholder="Search news" />
-                        <img src="./images/magnifying-glass.png" />
+                        <img src="../../images/magnifying-glass.png" />
                     </div>
                 </div>
             </div>
@@ -57,7 +57,24 @@
     </header>
 
     <!-- End here navbar  -->
+<div class="container0">
+    <h1>'We did not play.....':ROHIT SHARMA EXPLAIN WHY INDIA FAILED TO  DOMINATE AGAINST SHRI  LANKA SPIN</h1>
+<br><br>
+<p><span style="text-align: left;">
+    Date: Aug 8,2024<br>
+    Time:11.26 am<br>
+    Refers:Timeofindia<br>
+</span>
+</p>
+    <img src="./../../images/rohitsharma"style="height:400px;margin:20px">
+    <br>
+    <span>India captain Rohit Sharma at the end of the third ODI against Sri Lanka in Colombo.</span>
 
+
+
+
+
+</div>
 
 
 
